Added desktop viewer size config
Added arguments to configure the desktop viewer